Fix sticky sidebar display bugs
- Sidebars were shifting right by 20px when they became sticky. They
  should no longer shift (the class that gets added when a sidebars
  bottoms out prevents the shifting).
- The sidebar backgrounds were overflowing their containers and
  overlapping subsequent sections when the sidebars became sticky. That
  overlap should be fixed (the overflow is actually still there, but all
  the subsequent sections were given a z-index to position them on top of
  the sticky sidebars in previous sections).
- Sidebars weren't becoming sticky when the page was loaded. Fixed this
  by moving the sticky init call to the verification callback (sidebars
  needed to be visible on the page to be made sticky).

--- a/src/disclosures/css/disclosures.less
+++ b/src/disclosures/css/disclosures.less
@@ -575,7 +575,11 @@
 }
 
 .offer-part {
-  margin-top: unit(45px / @base-font-size-px, em);
+  /* padding-top, z-index, and background color need to be set here to make
+     sticky sidebars work correctly */
+  padding-top: unit(45px / @base-font-size-px, em);
+  z-index: 200;
+  background-color: #fff;
 
   .respond-to-min(@bp-sm-min, {
     .grid_nested-col-group();
@@ -638,6 +642,11 @@
       &.is_stuck {
         .grid_column(4);
         .grid_push(7);
+        margin-left: -20px;
+      }
+
+      &.is_stuck.is_bottomed {
+        margin-left: 0;
       }
 
     });
